src/app/shared/components/side-nav/side-nav-mobile/side-nav-mobile.component.scss
.mobile-nav-menu-button {
    position: fixed;
    margin: 12px 19px 12px 9px;

    #nav-icon1 span{
        display: block;
        margin:4px;
        height: 3px;
        width: 20px;
        background: #0078D4;
        border-radius: 9px;
    }
}

.sticky-navigation {
    top: 0;
    background: white;
    width: 75%;
    min-height: 100vh;
    height: 100%;
    z-index: 2;
    position: fixed;

    .components {
        .gg-close {
            box-sizing: border-box;
            position: relative;
            display: block;
            transform: scale(var(--ggs,1));
            width: 22px;
            height: 22px;
            border: 2px solid transparent;
            border-radius: 40px
        }
        .gg-close::after,
        .gg-close::before {
            content: "";
            display: block;
            box-sizing: border-box;
            position: absolute;
            width: 16px;
            height: 2px;
            background: currentColor;
            transform: rotate(45deg);
            border-radius: 5px;
            top: 8px;
            left: 1px
        }
        .gg-close::after {
            transform: rotate(-45deg)
        }

        overflow-y: scroll;
        .components-links {
            .component-section {
                display: flex;
                flex-direction: column;
                h5 {
                    margin: 12px 0;
                    font-weight: lighter;
                }
                a {
                    margin: 5px 0;
                }
            }
        };
    }
}

